Fix scrollbar issues

--- a/src/style/partials/_main.scss
+++ b/src/style/partials/_main.scss
@@ -14,6 +14,7 @@ body {
 	padding: 2em 3em;
 	margin: 0 auto;
 	background: url(../img/graph.svg);
+	overflow-y: scroll;
 }
 
 h1, h2, h3, h4, h5, h6 {
